<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/app_icon"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/version" />

        <com.google.android.material.card.MaterialCardView
            style="@style/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/information"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/ll_pressed"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start|center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    tools:ignore="TouchTargetSizeCheck">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="16dp"
                        app:srcCompat="@drawable/description"
                        tools:ignore="ContentDescription,RtlHardcoded" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/app_description"
                        android:textSize="15sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/dividing_line" />

                <LinearLayout
                    android:id="@+id/ll_dev"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ll_pressed"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start|center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="16dp"
                        app:srcCompat="@drawable/copyright"
                        tools:ignore="ContentDescription,RtlHardcoded" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/alexey_yuditsky"
                        android:textSize="15sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/dividing_line" />

                <LinearLayout
                    android:id="@+id/ll_share"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/ll_pressed"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start|center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="16dp"
                        app:srcCompat="@drawable/share"
                        tools:ignore="ContentDescription,RtlHardcoded" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/share"
                        android:textSize="15sp"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            style="@style/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/links"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ll_links"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/ll_pressed"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start|center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="16dp"
                        app:srcCompat="@drawable/market"
                        tools:ignore="ContentDescription,RtlHardcoded" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/google_play"
                            android:textSize="15sp"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/give_us_a_rating"
                            android:textSize="12sp"
                            tools:ignore="TextContrastCheck" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>